--- a/RSTKForm.resx
+++ b/RSTKForm.resx
@@ -117,26 +117,25 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="pbEmulatedFullscreen.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
-        xAAADsQBlSsOGwAAAcFJREFUSEvNlL9Kw1AUxkPpJA4+gYOIs5ODiIM4+AgOIiIOjuLsIk5SfABxEgen
-        4uATFJEiIg6SpSWUIB1Kmg4lbZImbf1OPMHba/60aQU/+A2559xzTu79uMq/kuu6B+CEP2cry7JWBoOB
-        B4bdbneDl2ejcrmc8zzvkYoTvu+/apqW5/D0sm17OywegqPa5/B00nU9j4k/5Ab9fr/ebDbnOS27MOnx
-        MEa9Xu+C07LJNM0FTGrI0wvY7XZ7kdMnFyYsCMWKGHqHQNObcB2Xf8/pkwm2XEYBNywEChxScCenwjrZ
-        dp1D4wuTPQQHzZIb8HIgfL+oqprjcLow0ZY4IRP7B4TjOHscTlalUiFbvssFQGID3MunYRjptoUtj+TN
-        TGIDAqY455RotVotsmWDj3ZEKBB7B6Gwt5NoW0xwKU8lcIsaqwQKXUXEA2COOy43KthyCQmiLTMDk6xx
-        2W+VSiV6LYtRyQIapqcXlVCF9V/gCJ+r1eqPbdFxkwJJQjz1DkTBtrtBcq1WI1u+iRPEkOoiEdyTDtvO
-        kS0PoxJksMGECVQCDRpROTLIPVOwsR4VnAVkW/qDa3R6+iOyvbTjS1G+ABH3f404omz7AAAAAElFTkSu
-        QmCC
-</value>
-  </data>
+  <metadata name="dlgBrowse.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
   <metadata name="toolTip.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>123, 11</value>
   </metadata>
-  <data name="pbEmulatedFullscreen.ToolTip" xml:space="preserve">
-    <value>Recommended setting: Off (unless... see below).
+  <data name="cbFullscreenMode.ToolTip" xml:space="preserve">
+    <value>Windowed: Runs in a regular window.
+
+WindowedFullscreen: Appears fullscreen, but does not gain exclusive use of the video device
+(similar to the fullscreen method used by video players)
+
+ExclusiveFullscreen: Fullscreen in exclusive mode.
+
+Windowed modes can be helpful if you have multiple monitors and want Rocksmith 2014 to be
+fullscreen on one monitor while maintaining regular use of the other monitors.</value>
+  </data>
+  <data name="checkEmulateFullscreen.ToolTip" xml:space="preserve">
+    <value>Off (unless... see below).
 
 On newer PC's (particularly those with Windows 10), Rocksmith appears to have
 difficulty managing the device state changes when attempting to enter fullscreen mode,
@@ -146,67 +145,40 @@ the Rocksmith window and making it a Top-Most window. This process can only work
 when Fullscreen mode is set to Windowed.
 
 Major caveat, though: The size of the window will be exactly the size of the Resolution
-setting, because Rocksmith doesn't respond well to having it's window resized much beyond
-that. If you have a low-spec PC with a very high-resolution display, you may find this leads to some
-serious performance issues.
-</value>
+setting, because Rocksmith doesn't respond well to having it's window resized much
+beyond that. If you have a low-spec PC with a very high-resolution display, you may find
+this leads to some serious performance issues.</value>
   </data>
-  <data name="pbExclusiveMode.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
-        xAAADsQBlSsOGwAAAcFJREFUSEvNlL9Kw1AUxkPpJA4+gYOIs5ODiIM4+AgOIiIOjuLsIk5SfABxEgen
-        4uATFJEiIg6SpSWUIB1Kmg4lbZImbf1OPMHba/60aQU/+A2559xzTu79uMq/kuu6B+CEP2cry7JWBoOB
-        B4bdbneDl2ejcrmc8zzvkYoTvu+/apqW5/D0sm17OywegqPa5/B00nU9j4k/5Ab9fr/ebDbnOS27MOnx
-        MEa9Xu+C07LJNM0FTGrI0wvY7XZ7kdMnFyYsCMWKGHqHQNObcB2Xf8/pkwm2XEYBNywEChxScCenwjrZ
-        dp1D4wuTPQQHzZIb8HIgfL+oqprjcLow0ZY4IRP7B4TjOHscTlalUiFbvssFQGID3MunYRjptoUtj+TN
-        TGIDAqY455RotVotsmWDj3ZEKBB7B6Gwt5NoW0xwKU8lcIsaqwQKXUXEA2COOy43KthyCQmiLTMDk6xx
-        2W+VSiV6LYtRyQIapqcXlVCF9V/gCJ+r1eqPbdFxkwJJQjz1DkTBtrtBcq1WI1u+iRPEkOoiEdyTDtvO
-        kS0PoxJksMGECVQCDRpROTLIPVOwsR4VnAVkW/qDa3R6+iOyvbTjS1G+ABH3f404omz7AAAAAElFTkSu
-        QmCC
-</value>
-  </data>
-  <data name="pbExclusiveMode.ToolTip" xml:space="preserve">
+  <data name="checkExclusiveMode.ToolTip" xml:space="preserve">
     <value>Recommended setting: On
 
 Disable this if you want to have other audio programs running at the same time as Rocksmith 2014.
-You may need to increase your Latency buffer setting to avoid audio issues if you choose to disable Exclusive Mode. </value>
+You may need to increase your Latency buffer setting to avoid audio issues if you choose to disable
+Exclusive Mode. </value>
   </data>
-  <data name="pbUltraLowLatency.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
-        xAAADsQBlSsOGwAAAcFJREFUSEvNlL9Kw1AUxkPpJA4+gYOIs5ODiIM4+AgOIiIOjuLsIk5SfABxEgen
-        4uATFJEiIg6SpSWUIB1Kmg4lbZImbf1OPMHba/60aQU/+A2559xzTu79uMq/kuu6B+CEP2cry7JWBoOB
-        B4bdbneDl2ejcrmc8zzvkYoTvu+/apqW5/D0sm17OywegqPa5/B00nU9j4k/5Ab9fr/ebDbnOS27MOnx
-        MEa9Xu+C07LJNM0FTGrI0wvY7XZ7kdMnFyYsCMWKGHqHQNObcB2Xf8/pkwm2XEYBNywEChxScCenwjrZ
-        dp1D4wuTPQQHzZIb8HIgfL+oqprjcLow0ZY4IRP7B4TjOHscTlalUiFbvssFQGID3MunYRjptoUtj+TN
-        TGIDAqY455RotVotsmWDj3ZEKBB7B6Gwt5NoW0xwKU8lcIsaqwQKXUXEA2COOy43KthyCQmiLTMDk6xx
-        2W+VSiV6LYtRyQIapqcXlVCF9V/gCJ+r1eqPbdFxkwJJQjz1DkTBtrtBcq1WI1u+iRPEkOoiEdyTDtvO
-        kS0PoxJksMGECVQCDRpROTLIPVOwsR4VnAVkW/qDa3R6+iOyvbTjS1G+ABH3f404omz7AAAAAElFTkSu
-        QmCC
-</value>
-  </data>
-  <data name="pbUltraLowLatency.ToolTip" xml:space="preserve">
+  <data name="checkUltraLowLatencyMode.ToolTip" xml:space="preserve">
     <value>Recommended setting: On
 
 Disable this if you’re having trouble getting the game to have good audio performance.
 This will drop the game back to the original Rocksmith audio settings and may resolve
-some audio crackling issues at the cost of some of the Rocksmith 2014 latency improvements.</value>
+some audio crackling issues at the cost of some of the Rocksmith 2014 latency
+improvements.</value>
   </data>
-  <data name="pbMaxOutputBufferSize.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
-        xAAADsQBlSsOGwAAAcFJREFUSEvNlL9Kw1AUxkPpJA4+gYOIs5ODiIM4+AgOIiIOjuLsIk5SfABxEgen
-        4uATFJEiIg6SpSWUIB1Kmg4lbZImbf1OPMHba/60aQU/+A2559xzTu79uMq/kuu6B+CEP2cry7JWBoOB
-        B4bdbneDl2ejcrmc8zzvkYoTvu+/apqW5/D0sm17OywegqPa5/B00nU9j4k/5Ab9fr/ebDbnOS27MOnx
-        MEa9Xu+C07LJNM0FTGrI0wvY7XZ7kdMnFyYsCMWKGHqHQNObcB2Xf8/pkwm2XEYBNywEChxScCenwjrZ
-        dp1D4wuTPQQHzZIb8HIgfL+oqprjcLow0ZY4IRP7B4TjOHscTlalUiFbvssFQGID3MunYRjptoUtj+TN
-        TGIDAqY455RotVotsmWDj3ZEKBB7B6Gwt5NoW0xwKU8lcIsaqwQKXUXEA2COOy43KthyCQmiLTMDk6xx
-        2W+VSiV6LYtRyQIapqcXlVCF9V/gCJ+r1eqPbdFxkwJJQjz1DkTBtrtBcq1WI1u+iRPEkOoiEdyTDtvO
-        kS0PoxJksMGECVQCDRpROTLIPVOwsR4VnAVkW/qDa3R6+iOyvbTjS1G+ABH3f404omz7AAAAAElFTkSu
-        QmCC
+  <data name="trackLatencyBuffer.ToolTip" xml:space="preserve">
+    <value>Recommended setting:
+1 for a very powerful PC;
+2 for a moderately powerful PC;
+4 otherwise.
+
+Determines the number of latency buffers Rocksmith uses in processing audio streams. The higher
+the number, the longer they take to fill (and the more latency is introduced into the gameplay).
+
+Going too high will lead to a severely diminished gameplay experience; going lower than what
+your CPU speed and memory bandwidth are capable of handling will lead to audio artefacts
+(clicks, pops, skipping, etc.).
 </value>
   </data>
-  <data name="pbMaxOutputBufferSize.ToolTip" xml:space="preserve">
+  <data name="trackMaxOutputBufferSize.ToolTip" xml:space="preserve">
     <value>Recommended setting:
 100-150 for a very powerful PC;
 250-400 for a moderately powerful PC;
@@ -215,61 +187,27 @@ some audio crackling issues at the cost of some of the Rocksmith 2014 latency im
 Determines the length of the sound device's output buffer; the larger the buffer, the
 longer it takes to fill (and the more latency is introduced into the gameplay).
 
-Going too high will lead to a severely diminished gameplay experience; going lower than what
-your CPU speed and memory bandwidth are capable of handling will lead to audio artefacts
-(clicks, pops, skipping, etc.).</value>
-  </data>
-  <data name="pbLatencyBuffer.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
-        xAAADsQBlSsOGwAAAcFJREFUSEvNlL9Kw1AUxkPpJA4+gYOIs5ODiIM4+AgOIiIOjuLsIk5SfABxEgen
-        4uATFJEiIg6SpSWUIB1Kmg4lbZImbf1OPMHba/60aQU/+A2559xzTu79uMq/kuu6B+CEP2cry7JWBoOB
-        B4bdbneDl2ejcrmc8zzvkYoTvu+/apqW5/D0sm17OywegqPa5/B00nU9j4k/5Ab9fr/ebDbnOS27MOnx
-        MEa9Xu+C07LJNM0FTGrI0wvY7XZ7kdMnFyYsCMWKGHqHQNObcB2Xf8/pkwm2XEYBNywEChxScCenwjrZ
-        dp1D4wuTPQQHzZIb8HIgfL+oqprjcLow0ZY4IRP7B4TjOHscTlalUiFbvssFQGID3MunYRjptoUtj+TN
-        TGIDAqY455RotVotsmWDj3ZEKBB7B6Gwt5NoW0xwKU8lcIsaqwQKXUXEA2COOy43KthyCQmiLTMDk6xx
-        2W+VSiV6LYtRyQIapqcXlVCF9V/gCJ+r1eqPbdFxkwJJQjz1DkTBtrtBcq1WI1u+iRPEkOoiEdyTDtvO
-        kS0PoxJksMGECVQCDRpROTLIPVOwsR4VnAVkW/qDa3R6+iOyvbTjS1G+ABH3f404omz7AAAAAElFTkSu
-        QmCC
+Going too high will lead to a severely diminished gameplay experience; going lower
+than what your CPU speed and memory bandwidth are capable of handling will lead
+to audio artefacts (clicks, pops, skipping, etc.).
 </value>
   </data>
-  <data name="pbLatencyBuffer.ToolTip" xml:space="preserve">
-    <value>Recommended setting:
-1 for a very powerful PC;
-2 for a moderately powerful PC;
-4 otherwise.
-
-Determines the number of latency buffers Rocksmith uses in processing audio streams. The higher the number,
-the longer they take to fill (and the more latency is introduced into the gameplay).
-
-Going too high will lead to a severely diminished gameplay experience; going lower than what
-your CPU speed and memory bandwidth are capable of handling will lead to audio artefacts
-(clicks, pops, skipping, etc.).</value>
-  </data>
-  <data name="pbEffectiveLatency.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
-        xAAADsQBlSsOGwAAAcFJREFUSEvNlL9Kw1AUxkPpJA4+gYOIs5ODiIM4+AgOIiIOjuLsIk5SfABxEgen
-        4uATFJEiIg6SpSWUIB1Kmg4lbZImbf1OPMHba/60aQU/+A2559xzTu79uMq/kuu6B+CEP2cry7JWBoOB
-        B4bdbneDl2ejcrmc8zzvkYoTvu+/apqW5/D0sm17OywegqPa5/B00nU9j4k/5Ab9fr/ebDbnOS27MOnx
-        MEa9Xu+C07LJNM0FTGrI0wvY7XZ7kdMnFyYsCMWKGHqHQNObcB2Xf8/pkwm2XEYBNywEChxScCenwjrZ
-        dp1D4wuTPQQHzZIb8HIgfL+oqprjcLow0ZY4IRP7B4TjOHscTlalUiFbvssFQGID3MunYRjptoUtj+TN
-        TGIDAqY455RotVotsmWDj3ZEKBB7B6Gwt5NoW0xwKU8lcIsaqwQKXUXEA2COOy43KthyCQmiLTMDk6xx
-        2W+VSiV6LYtRyQIapqcXlVCF9V/gCJ+r1eqPbdFxkwJJQjz1DkTBtrtBcq1WI1u+iRPEkOoiEdyTDtvO
-        kS0PoxJksMGECVQCDRpROTLIPVOwsR4VnAVkW/qDa3R6+iOyvbTjS1G+ABH3f404omz7AAAAAElFTkSu
-        QmCC
-</value>
-  </data>
-  <data name="pbEffectiveLatency.ToolTip" xml:space="preserve">
+  <data name="lblEffectiveLatency.ToolTip" xml:space="preserve">
     <value>Recommended value: 20-60ms
 
 Tweak Estimated Latency by adjusting the values for Latency buffer and Max output buffer size.
-Going too high will lead to a severely diminished gameplay experience; going lower than what your CPU speed and memory
-bandwidth are capable of handling will lead to audio artefacts (clicks, pops, skipping, etc.).</value>
+Going too high will lead to a severely diminished gameplay experience; going lower than what your
+CPU speed and memory bandwidth are capable of handling will lead to audio artefacts
+(clicks, pops, skipping, etc.).
+</value>
   </data>
-  <metadata name="dlgBrowse.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>17, 17</value>
-  </metadata>
+  <data name="checkDumpAudioLog.ToolTip" xml:space="preserve">
+    <value>Recommended setting: Off
+
+Enable this if you need to send debugging information to Ubisoft. It will create a text file called audiodump.txt,
+located in the same directory as the Rocksmith application. Once you have run the game with this switched on
+ be sure to switch it off again next time (leaving it enabled can degrade performance).</value>
+  </data>
   <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>47</value>
   </metadata>
