--- a/Properties/Resources.resx
+++ b/Properties/Resources.resx
@@ -139,6 +139,9 @@
   <data name="rstk_waiting_icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\rstk_waiting_icon.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="settings_16" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Settings-02-16.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="steam_24" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\steam_24.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
